--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.4.5",
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-auth-kit": "^3.1.3",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
