--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "react-auth-kit": "^3.1.3"
   }
 }
